db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgredb
  template:
    metadata:
      labels:
        app: postgredb
    spec:
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: pgdata
      containers:
        - name: flask-db
          image: postgres:14.10
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data/
              name: pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgredb-service
spec:
  selector:
    app: postgredb
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
