ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.aandrade.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-api-service
            port:
              number: 80
